@@ -2917,6 +2917,15 @@ void do_toggle(const toggle *which)
 }
 #endif /* !NANO_SMALL */
 
+void disable_extended_input(void)
+{
+    struct termios term;
+
+    tcgetattr(0, &term);
+    term.c_lflag &= ~IEXTEN;
+    tcsetattr(0, TCSANOW, &term);
+}
+
 void disable_signals(void)
 {
     struct termios term;
@@ -2959,15 +2968,16 @@ void enable_flow_control(void)
  * character at a time and interpret the special control keys), disable
  * translation of carriage return (^M) into newline (^J) so that we can
  * tell the difference between the Enter key and Ctrl-J, and disable
- * echoing of characters as they're typed.  Finally, disable
- * interpretation of the special control keys, and if we're not in
- * preserve mode, disable interpretation of the flow control characters
- * too. */
+ * echoing of characters as they're typed.  Finally, disable extended
+ * input processing, disable interpretation of the special control keys,
+ * and if we're not in preserve mode, disable interpretation of the flow
+ * control characters too. */
 void terminal_init(void)
 {
     cbreak();
     nonl();
     noecho();
+    disable_extended_input();
     disable_signals();
     if (!ISSET(PRESERVE))
 	disable_flow_control();
